--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   "dependencies": {
     "@ffmpeg/core": "^0.10.0",
     "@ffmpeg/ffmpeg": "^0.10.1",
+    "aws-sdk": "^2.1096.0",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
@@ -45,6 +47,7 @@
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "node-fetch": "^2.6.6",
     "pug": "^3.0.2",
     "regenerator-runtime": "^0.13.9",
